[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
secret-toolkit = { version = "0.10.0", default-features = false, features = [
    "utils",
    "storage",
    "serialization",
    "viewing-key",
    "permit",
] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
schemars = "0.8.21"
